Pulling data from Google places using API

--- a/Google API Test.ipynb
+++ b/Google API Test.ipynb
@@ -2,22 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n",
-      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n",
-      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
-      "  warnings.warn(\n"
+      "Requirement already satisfied: python-google-places in /opt/homebrew/lib/python3.11/site-packages (1.4.2)\n",
+      "Requirement already satisfied: six in /opt/homebrew/lib/python3.11/site-packages (from python-google-places) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
+   "source": [
+    "#pip install python-google-places"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\n",
     "from googleplaces import types\n",
@@ -60,39 +69,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Restaurants:\n",
-      "One Aldwych\n",
-      "Covent Garden Hotel\n",
-      "Sofitel London St James\n",
-      "Simpson's in the Strand\n",
-      "\n",
-      "Hotels:\n",
-      "The Savoy\n",
-      "One Aldwych\n",
-      "Corinthia London\n",
-      "Apex Temple Court Hotel\n",
-      "Covent Garden Hotel\n",
-      "\n",
-      "Attractions:\n",
-      "The National Gallery\n",
-      "National Portrait Gallery\n",
-      "Hayward Gallery\n",
-      "Two Temple Place\n",
-      "Calvert 22 Foundation\n",
-      "Southbank Printmakers\n",
-      "The Courtauld Gallery\n",
-      "Castle Fine Art\n",
-      "ARTE GLOBALE​ Limited\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "print(\"Restaurants:\")\n",
