--- a/Google API Test.ipynb
+++ b/Google API Test.ipynb
@@ -2,76 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: python-google-places in /opt/homebrew/lib/python3.11/site-packages (1.4.2)\n",
-      "Requirement already satisfied: six in /opt/homebrew/lib/python3.11/site-packages (from python-google-places) (1.16.0)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.11 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#pip install python-google-places"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n",
+      "/opt/homebrew/lib/python3.11/site-packages/urllib3/connectionpool.py:1095: InsecureRequestWarning: Unverified HTTPS request is being made to host 'maps.googleapis.com'. Adding certificate verification is strongly advised. See: https://urllib3.readthedocs.io/en/latest/advanced-usage.html#tls-warnings\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "from googleplaces import types\n",
     "\n",
     "YOUR_API_KEY = 'AIzaSyBO8ZHU4yV0XDnyzrfQVn2khhm-QI9-LIA'\n",
-    "base_url = 'https://maps.googleapis.com/maps/api/place/nearbysearch/json'\n",
+    "geocoding_url = 'https://maps.googleapis.com/maps/api/geocode/json'\n",
+    "\n",
+    "places_url = 'https://maps.googleapis.com/maps/api/place/nearbysearch/json'\n",
     "\n",
     "session = requests.Session()\n",
     "session.verify = False  # Disable SSL certificate verification\n",
     "\n",
-    "params = {\n",
+    "location = input(\"Enter Location: \")\n",
+    "#latitude, longitude = location.split(\",\")\n",
+    "\n",
+    "geocoding_params = {\n",
     "    'key': YOUR_API_KEY,\n",
-    "    'location': '51.509865, -0.118092',\n",
-    "    'radius': 10000,\n",
-    "    'type': types.TYPE_RESTAURANT\n",
+    "    'address': location\n",
     "}\n",
     "\n",
-    "response = session.get(base_url, params=params)\n",
-    "restaurant_data = response.json()\n",
-    "restaurants= [restaurant for restaurant in restaurant_data['results'] if restaurant.get('rating', 0) > 4.5]\n",
+    "geocoding_response = session.get(geocoding_url, params=geocoding_params)\n",
+    "geocoding_data = geocoding_response.json()\n",
+    "\n",
+    "if geocoding_data['status'] == 'OK':\n",
+    "    result = geocoding_data['results'][0]\n",
+    "    location = result['geometry']['location']\n",
+    "    latitude = location['lat']\n",
+    "    longitude = location['lng']\n",
+    "\n",
+    "    places_params = {\n",
+    "        'key': YOUR_API_KEY,\n",
+    "        'location': f\"{latitude},{longitude}\",\n",
+    "        'radius': 10000,\n",
+    "        'type': types.TYPE_RESTAURANT\n",
+    "    }\n",
+    "\n",
+    "    response = session.get(places_url, params=places_params)\n",
+    "    restaurant_data = response.json()\n",
+    "    restaurants= [restaurant for restaurant in restaurant_data['results'] if restaurant.get('rating', 0) > 4.5]\n",
     "\n",
     "\n",
     "\n",
-    "params['type'] = types.TYPE_LODGING\n",
-    "response = session.get(base_url, params=params)\n",
-    "lodging_data = response.json()\n",
-    "lodging= [lodge for lodge in lodging_data['results'] if lodge.get('rating', 0) > 4.5]\n",
+    "    places_params['type'] = types.TYPE_LODGING\n",
+    "    response = session.get(places_url, params=places_params)\n",
+    "    lodging_data = response.json()\n",
+    "    lodging= [lodge for lodge in lodging_data['results'] if lodge.get('rating', 0) > 4.5]\n",
     "\n",
     "\n",
     "\n",
-    "params['type'] = [types.TYPE_ART_GALLERY, types.TYPE_AQUARIUM,types.TYPE_MUSEUM, types.TYPE_BOWLING_ALLEY, types.TYPE_ZOO, types.TYPE_STADIUM]\n",
-    "response = session.get(base_url, params=params)\n",
-    "attraction_data = response.json()\n",
-    "attractions= [attraction for attraction in attraction_data['results'] if attraction.get('rating', 0) > 4.5]\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "    places_params['type'] = [types.TYPE_ART_GALLERY, types.TYPE_AQUARIUM,types.TYPE_MUSEUM, types.TYPE_BOWLING_ALLEY, types.TYPE_ZOO, types.TYPE_STADIUM]\n",
+    "    response = session.get(places_url, params=places_params)\n",
+    "    attraction_data = response.json()\n",
+    "    attractions= [attraction for attraction in attraction_data['results'] if attraction.get('rating', 0) > 4.5]\n",
+    "else:\n",
+    "    print (\"No Location found\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Restaurants:\n",
+      "Amarachi Restaurant\n",
+      "Kings Cafe And Restaurant\n",
+      "Calabar Restaurant And Bar\n",
+      "Mama Bose restaurant\n",
+      "\n",
+      "Hotels:\n",
+      "Dankaliturawa Hotel Saki\n",
+      "Maiduguri\n",
+      "Nigeria\n",
+      "Akwa ibom\n",
+      "\n",
+      "Attractions:\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "print(\"Restaurants:\")\n",
