--- a/Google API Test.ipynb
+++ b/Google API Test.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
     "import requests\n",
     "from googleplaces import types\n",
     "\n",
-    "YOUR_API_KEY = 'AIzaSyBO8ZHU4yV0XDnyzrfQVn2khhm-QI9-LIA'\n",
+    "YOUR_API_KEY = ' '\n",
     "geocoding_url = 'https://maps.googleapis.com/maps/api/geocode/json'\n",
     "\n",
     "places_url = 'https://maps.googleapis.com/maps/api/place/nearbysearch/json'\n",
@@ -43,6 +43,7 @@
     "\n",
     "location = input(\"Enter Location: \")\n",
     "#latitude, longitude = location.split(\",\")\n",
+    "radius = input(\"Enter a radius : \")\n",
     "\n",
     "geocoding_params = {\n",
     "    'key': YOUR_API_KEY,\n",
@@ -61,7 +62,7 @@
     "    places_params = {\n",
     "        'key': YOUR_API_KEY,\n",
     "        'location': f\"{latitude},{longitude}\",\n",
-    "        'radius': 10000,\n",
+    "        'radius': radius,\n",
     "        'type': types.TYPE_RESTAURANT\n",
     "    }\n",
     "\n",
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,18 +97,30 @@
      "output_type": "stream",
      "text": [
       "Restaurants:\n",
-      "Amarachi Restaurant\n",
-      "Kings Cafe And Restaurant\n",
-      "Calabar Restaurant And Bar\n",
-      "Mama Bose restaurant\n",
+      "One Aldwych\n",
+      "Covent Garden Hotel\n",
+      "Sofitel London St James\n",
+      "Simpson's in the Strand\n",
+      "Hawksmoor Seven Dials\n",
       "\n",
       "Hotels:\n",
-      "Dankaliturawa Hotel Saki\n",
-      "Maiduguri\n",
-      "Nigeria\n",
-      "Akwa ibom\n",
+      "Corinthia London\n",
+      "The Savoy\n",
+      "One Aldwych\n",
+      "Covent Garden Hotel\n",
+      "The Soho Hotel\n",
+      "Sofitel London St James\n",
       "\n",
-      "Attractions:\n"
+      "Attractions:\n",
+      "The National Gallery\n",
+      "National Portrait Gallery\n",
+      "Hayward Gallery\n",
+      "Daniel Crouch Rare Books\n",
+      "Calvert 22 Foundation\n",
+      "Thomas Dane Gallery\n",
+      "Opera Gallery London\n",
+      "John Martin Gallery\n",
+      "Willow Gallery - London\n"
      ]
     }
    ],
