making modifications to the popularity recommendation to return more information that can be worked with, then making changes on the front end application to connect the returned outputs from the backend to the front end. These changes can majorly bee seen on the modal. The user review , name and ratings.

--- a/Data/dataset.ipynb
+++ b/Data/dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,19 +11,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5985"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Loading the dataset\n",
     "category = pd.read_csv('Raw/Hotels_in_Canada.csv')\n",
     "\n",
-    "reviews = pd.read_csv('Raw/Hotels_in_Canada_Reviews.csv')\n"
+    "reviews = pd.read_csv('Raw/Hotels_in_Canada_Reviews.csv')\n",
+    "\n",
+    "len(category)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,32 +70,68 @@
     "    average_ratings_df = average_ratings.reset_index(name='Average Rating')\n",
     "\n",
     "\n",
-    "    # Merging§ the popularity metrics DataFrames with the \"Hotels\" DataFrame based on the common \"Id\" column\n",
+    "    # Merging the popularity metrics DataFrames with the \"Hotels\" DataFrame based on the common \"Id\" column\n",
     "    hotels_with_popularity = category.merge(reviews_count, on='id', how='left')\n",
     "    hotels_with_popularity = hotels_with_popularity.merge(average_ratings_df, on='id', how='left')\n",
     "\n",
     "    # Sort the DataFrame by 'Review Count' and 'Average Rating' column in descending order to allow the highest-rated hotels will be ranked at the top.\n",
-    "    sorted_hotels_by_reviews = hotels_with_popularity.sort_values(by='Review Count', ascending=False)\n",
+    "    # sorted_hotels_by_reviews = hotels_with_popularity.sort_values(by='Review Count', ascending=False)\n",
     "    sorted_hotels_by_rating = hotels_with_popularity.sort_values(by='Average Rating', ascending=False)\n",
     "\n",
     "    # Select the top 30 hotels from the sorted DataFrame, I am using 30 to provide users with a sufficient number of options while still maintaining a manageable list that avoids overwhelming them.\n",
-    "    #top_30_hotels = sorted_hotels_by_rating.head(30)\n",
+    "    top_30_hotels = sorted_hotels_by_rating.head(30)\n",
     "    \n",
-    "    return sorted_hotels_by_rating\n"
+    "    return top_30_hotels\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'top_30_hotels' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m top_30_hotels\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'top_30_hotels' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "curated_data=processed(category, reviews)"
+    "top_30_hotels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "curated_data=processed(category, reviews) \n",
+    "\n",
+    "filtered_df = curated_data[curated_data['country'] == 'Canada']\n",
+    "\n",
+    "len(filtered_df[\"id\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,6 +139,26 @@
     "\n",
     "curated_data.to_csv(\"Curated/category_by_rating.csv\" ,index=False)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(curated_data[\"id\"])"
    ]
   }
  ],
