Updating the gitignore, Testing out the userbased feature, making design changes to the destination details page

--- a/Data/userBasedCF.ipynb
+++ b/Data/userBasedCF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,47 +15,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('Raw/merged.csv')"
+    "hotel_data = pd.read_csv('../Data/Raw/Hotels/Hotel.csv')\n",
+    "reviews_data = pd.read_csv('../Data/Raw/Hotels/Hotel_Reviews.csv')\n",
+    "# Merge the datasets using a common column, e.g., 'hotel_id'\n",
+    "merged_data = pd.merge(reviews_data, hotel_data, on='id', how='inner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.shape\n",
-    "np.random.seed(29)\n",
-    "index = np.random.randint(low=0, high=len(data), size=5000)"
+    "train = merged_data.iloc[1:]  \n",
+    "test = merged_data.iloc[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dat = data.iloc[index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#split into training and testing\n",
-    "train = dat.iloc[1: len(dat)]\n",
-    "test = dat.iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +46,14 @@
     "vectorizer = TfidfVectorizer(analyzer='word')\n",
     "tfidf_matrix = vectorizer.fit_transform(train['user_review'].values)\n",
     "\n",
+    "\n",
     "# Calculate cosine similarities for the original dataset\n",
     "cosine_similarities = cosine_similarity(tfidf_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +74,7 @@
     "\n",
     "\n",
     "\n",
-    "testing_data = 'I had a terrible experience'\n",
+    "testing_data = \"Simply the BEST This was my wife and my second visit in just over a year and simply put its the best. Our hosts Fred and Rowena as usual were cordial and caring, respectful when need be and lively conversationests when invited. The acomidations are spotless and comfortable, a home away from.\"\n",
     "# Transform new text reviews into TF-IDF vectors using the existing vocabulary\n",
     "new_tfidf_matrix = loaded_vectorizer.transform([testing_data])\n",
     "\n",
@@ -101,25 +84,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "most_similar_indices = np.argmax(cosine_similarities_new, axis=1)"
+    "most_similar_indices = np.argsort(cosine_similarities_new, axis=1)[:, -3:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1682])"
+       "array([[ 5523, 27142, 10288]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,25 +113,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "New Entry: I had a terrible experience\n",
-      "Most Similar Entry: [356 'Spanish Villa Resort' '3.5' 'Very good'\n",
-      " \"['pool', 'free parking', 'free high speed internet (wifi)', 'indoor pool', 'laundry service', 'non-smoking hotel', 'pets allowed ( dog / pet friendly )', 'wheelchair access', 'air conditioning', 'refrigerator in room', 'family rooms', 'kitchenette', 'non-smoking rooms', 'suites']\"\n",
-      " '890 Lakeshore Dr W Penticton British Columbia' 'Canada' 2\n",
-      " 'Below Average' 'Flandra95'\n",
-      " \"Terrible hotel with a great location When we first arrived we loved the location, right across from  the lake, but our suite was terrible. Really old fashion furniture, the sofa bed had the worst mattress and the dishes inside the cupboard were dirty. We had to pay $3.00 to get ice from the ice machine. The', '…\"\n",
-      " 'Aug. 2014' ' August 2014']\n",
-      "Cosine Similarity: 0.2912550952986136\n"
+      "New Entry: Simply the BEST This was my wife and my second visit in just over a year and simply put its the best. Our hosts Fred and Rowena as usual were cordial and caring, respectful when need be and lively conversationests when invited. The acomidations are spotless and comfortable, a home away from.\n",
+      "Most Similar Entry: [[18 5 'jacstar351' 'Simply the Best!!! L.' \"L'Hermitage Hotel\" 5.0\n",
+      "  'Excellent'\n",
+      "  \"['Pool', 'Fitness Centre with Gym / Workout Room', 'Free High Speed Internet (WiFi)', 'Bar/Lounge', 'Room service', 'Business Centre with Internet Access', 'Concierge', 'Conference Facilities', 'Dry Cleaning', 'Heated pool', 'Hot Tub', 'Laundry Service', 'Meeting rooms', 'Multilingual Staff', 'Non-smoking hotel', 'Outdoor pool', 'Pets Allowed ( Dog / Pet Friendly )', 'Wheelchair Access', 'Air conditioning', 'Refrigerator in room', 'Accessible rooms', 'Family Rooms', 'Kitchenette', 'Non-smoking rooms', 'Suites']\"\n",
+      "  '788 Richards Street Vancouver British Columbia' 'Canada' ' ' ' ' ' ']\n",
+      " [383 5 'ElBeeVancouver' 'Simply the Best B&B I.'\n",
+      "  'Above The Beach Bed & Breakfast' nan nan '[]'\n",
+      "  '102 Spruce Pl Penticton British Columbia' 'Canada' ' ' ' ' ' ']\n",
+      " [368 5 'Jeanette C'\n",
+      "  'Simply the BEST This was my wife and my second visit in just over a year and simply put its the best. Our hosts Fred and Rowena as usual were cordial and caring, respectful when need be and lively conversationests when invited. The acomidations are spotless and comfortable, a home away from.'\n",
+      "  \"Rowena's Retreat\" 5.0 'Excellent'\n",
+      "  \"['Free parking', 'Free High Speed Internet (WiFi)', 'Breakfast included', 'Airport transportation', 'Non-smoking hotel', 'Public Wifi', 'Air conditioning', 'Non-smoking rooms']\"\n",
+      "  '1576 Holden Rd Penticton British Columbia' 'Canada' ' ' ' ' ' ']]\n",
+      "Cosine Similarity: [0.36462417 0.36462417 1.        ]\n"
      ]
     }
    ],
    "source": [
+    "\n",
+    "# Display the most similar entries from the original dataset for each entry in the new dataset\n",
+    "for i, new_entry in enumerate([testing_data]):\n",
+    "    most_similar_index = most_similar_indices[i]\n",
+    "    most_similar_entry = train.values[most_similar_index]\n",
+    "    print(f\"New Entry: {new_entry}\")\n",
+    "    print(f\"Most Similar Entry: {most_similar_entry}\")\n",
+    "    print(f\"Cosine Similarity: {cosine_similarities_new[i, most_similar_index]}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "data = pd.read_csv('Raw/merged.csv')\n",
+    "\n",
+    "data.shape\n",
+    "np.random.seed(29)\n",
+    "index = np.random.randint(low=0, high=len(data), size=5000)\n",
+    "\n",
+    "dat = data.iloc[index]\n",
+    "\n",
+    "#split into training and testing\n",
+    "train = dat.iloc[1: len(dat)]\n",
+    "test = dat.iloc[0]\n",
+    "\n",
+    "#cosine similarity task\n",
+    "# Initialize and fit the TF-IDF vectorizer, using feature made of words\n",
+    "vectorizer = TfidfVectorizer(analyzer='word')\n",
+    "tfidf_matrix = vectorizer.fit_transform(train['user_review'].values)\n",
+    "\n",
+    "# Calculate cosine similarities for the original dataset\n",
+    "cosine_similarities = cosine_similarity(tfidf_matrix)\n",
+    "\n",
+    "most_similar_indices = np.argmax(cosine_similarities_new, axis=1)\n",
+    "\n",
     "#most_similar_indices = np.argmax(cosine_similarities_new, axis=1)\n",
     "\n",
     "# Display the most similar entries from the original dataset for each entry in the new dataset\n",
